B-F Sandbox Full-Backup/src/objects/wombat_Sync_Session__c.object
<CustomObject>
    <fields>
        <fullName>App_Version__c</fullName>
        <label>App_Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateModified__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>DateModified</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_Unique_ID__c</fullName>
        <label>Device_Unique_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finalised_On_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalised On Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP_Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InProgress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>InProgress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionFinish__c</fullName>
        <label>SessionFinish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SessionStart__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>SessionStart</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>wombat_Sync_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>wombat_Sync_Session</label>
    <listViews>
        <fullName>Sync_Sessions</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>App_Version__c</columns>
        <columns>Finalised_On_Client__c</columns>
        <columns>InProgress__c</columns>
        <columns>Model__c</columns>
        <columns>Status__c</columns>
        <columns>SessionStart__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sync Sessions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WS-{000000}</displayFormat>
        <label>SessionID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>wombat_Sync_Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>